[gd_scene load_steps=8 format=3 uid="uid://cq3v3io0y1kms"]

[ext_resource type="Script" path="res://scenes/schematic.gd" id="1_q7w2l"]
[ext_resource type="Theme" uid="uid://deqbs7na0dine" path="res://assets/ui/schematic.theme" id="1_tlap4"]
[ext_resource type="PackedScene" uid="uid://1ugdcg3f5q1w" path="res://scenes/IOManager.tscn" id="2_7dp20"]
[ext_resource type="PackedScene" uid="uid://soo142csxxxi" path="res://scenes/MemoryManager.tscn" id="3_3rybu"]
[ext_resource type="PackedScene" uid="uid://c7pcrpp8inqwr" path="res://scenes/TestRunner.tscn" id="3_lacat"]
[ext_resource type="PackedScene" uid="uid://kp63t0sdyggh" path="res://scenes/circuit_tree.tscn" id="5_gxq4f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ydr2j"]
bg_color = Color(0.14902, 0.14902, 0.14902, 1)

[node name="Schematic" type="GraphEdit"]
size_flags_vertical = 3
theme = ExtResource("1_tlap4")
right_disconnects = true
script = ExtResource("1_q7w2l")

[node name="IOManagerPanel" type="PopupPanel" parent="."]
title = "IO Manager"
borderless = false
theme_override_styles/panel = SubResource("StyleBoxFlat_ydr2j")

[node name="IOManager" parent="IOManagerPanel" instance=ExtResource("2_7dp20")]
offset_right = 700.0
offset_bottom = 520.0

[node name="MemoryManagerPanel" type="PopupPanel" parent="."]
title = "Memory Manager"
borderless = false
theme_override_styles/panel = SubResource("StyleBoxFlat_ydr2j")

[node name="MemoryManager" parent="MemoryManagerPanel" instance=ExtResource("3_3rybu")]
offset_left = 0.0
offset_top = 0.0
offset_right = 412.0
offset_bottom = 100.0

[node name="BlockTreePanel" type="PopupPanel" parent="."]
title = "Circuit Tree"
size = Vector2i(400, 300)
unresizable = false
borderless = false

[node name="CircuitTree" parent="BlockTreePanel" instance=ExtResource("5_gxq4f")]
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0

[node name="C" type="CanvasLayer" parent="."]

[node name="TestRunner" parent="C" instance=ExtResource("3_lacat")]
visible = false
offset_top = 0.0
offset_bottom = 369.0

[connection signal="scroll_offset_changed" from="." to="." method="_on_scroll_offset_changed"]
[connection signal="play" from="C/TestRunner" to="." method="_on_test_runner_play"]
[connection signal="reset" from="C/TestRunner" to="." method="_on_test_runner_reset"]
[connection signal="step" from="C/TestRunner" to="." method="_on_test_runner_step"]
[connection signal="stop" from="C/TestRunner" to="." method="_on_test_runner_stop"]
